Batchen skal være unik i ErUngUforBatchResponse

--- a/docs/api/ufore/erungufor/erungufor-api.yaml
+++ b/docs/api/ufore/erungufor/erungufor-api.yaml
@@ -277,6 +277,7 @@ components:
       properties:
         batch:
           type: array
+          uniqueItems: true
           items:
             $ref: '#/components/schemas/ErUngUforResponse'
       required:
