--- a/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
+++ b/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
@@ -50,6 +50,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        404:
+          description: Person ikke funnet
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: Uventet feil oppstått
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /opptjening/afp/beholdningsgrunnlag/simuler:
     post:
       description: "Simulerer beholdningsgrunnlag med tilvekst fra oppgitte inntekter fra og med angitt dato. NB! Grunnlag med fraOgMedDato senere enn siste kjente grunnbeløpsendring vil ikke være lønnsvekstregulert - se https://www.nav.no/grunnbelopet. Krever audience-restricted maskinportentoken for ressurs: https://server-url/opptjening/afp/beholdningsgrunnlag og scope: nav:pensjonopptjening:ekstern.afp.beholdningsgrunnlag.simuler.read"
@@ -87,6 +99,18 @@ paths:
           description: Autentisering feilet
         403:
           description: Autorisering til ressurs feilet, feks feil scope i token
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        404:
+          description: Person ikke funnet
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: Uventet feil oppstått
           content:
             application/json:
               schema:
