Oppdatert url i vedtaksinformasjon.

--- a/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
+++ b/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
@@ -7,8 +7,8 @@ info:
 
     Tjenesten returnerer den samordningspliktige informasjonen om en brukers vedtak.
 servers:
-  - url: https://pensjon-gw.ekstern.dev.nav.no/pensjon/vedtak/informasjon
-  - url: https://pensjon-gw.nav.no/pensjon/vedtak/informasjon
+  - url: https://pensjon-gw.ekstern.dev.nav.no/pensjon/vedtak/
+  - url: https://pensjon-gw.nav.no/pensjon/vedtak/
 paths:
   /informasjon:
     get:
