Delegation supported in simulering2025

--- a/docs/api/alderspensjon/simulering2025/apidocSimulering2025.yaml
+++ b/docs/api/alderspensjon/simulering2025/apidocSimulering2025.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.1
 info:
   title: Pensjonssimulator API
-  description: For å kunne bruke tjenestene må scope i autentiseringen mot Maskinporten settes til `nav:pensjonssimulator:simulering`. Dette er simuleringstjenester for tjenestepensjonsordninger i offentlig sektor, og benyttes for å kunne simulere alderspensjon fra folketrygden for brukere med tjenestepensjonsforhold.
-  version: v1.0.0
+  description: For å kunne bruke tjenestene må scope i autentiseringen mot Maskinporten settes til `nav:pensjonssimulator:simulering` (hvis delegering ikke brukes) eller `nav:pensjon/simulering.read` (hvis delegering brukes). Dette er simuleringstjenester for tjenestepensjonsordninger i offentlig sektor, og benyttes for å kunne simulere alderspensjon fra folketrygden for brukere med tjenestepensjonsforhold.
+  version: v1.1.0
 servers:
   - url: https://pensjon-gw.ekstern.dev.nav.no
   - url: https://pensjon-gw.nav.no
@@ -27,6 +27,8 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AlderspensjonResultV4'
+        '400':
+          description: Simulering kunne ikke utføres pga. uakseptabel input. Det kan være: (1) helt uttak ikke etter gradert uttak, (2) inntekt ikke 1. i måneden, (3) inntekter har lik startdato, (4) negativ inntekt.
       security:
         - BearerAuthentication: []
   /pensjonssimulator/v1/tidligst-mulig-uttak:
