Lagt til url til Q1 for simuler alderspensjon og hent vedtaksinformasjon

--- a/docs/api/alderspensjon/simulering/apidocSimulerAlderspensjon.yaml
+++ b/docs/api/alderspensjon/simulering/apidocSimulerAlderspensjon.yaml
@@ -2,10 +2,15 @@ openapi: 3.0.1
 info:
   version: 1.0.1
   title: Pensjon Simuler Alderspensjon
-  description: For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til `nav:pensjon/v3/alderspensjon`. Dette er en simuleringstjeneste for tjenestepensjonsordninger i offentlig sektor, og benyttes for å kunne simulere alderspensjon fra folketrygden for brukere med TP-forhold.
+  description: |-
+    For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til `nav:pensjon/v3/alderspensjon`. 
+    Dette er en simuleringstjeneste for tjenestepensjonsordninger i offentlig sektor, og benyttes for å kunne simulere
+    alderspensjon fra folketrygden for brukere med TP-forhold.
+    
   contact: {}
 servers:
   - url: https://pensjon-gw.ekstern.dev.nav.no
+  - url: https://pensjon-q1-gw.ekstern.dev.nav.no
   - url: https://pensjon-gw.nav.no
 paths:
   /simuler/alderspensjon/v3:
