Oppdatert dokumentasjon for tpregisteret.
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/docs/api/samordning/hendelser-api.yaml
+++ b/docs/api/samordning/hendelser-api.yaml
@@ -4,7 +4,7 @@ info:
   description: |-
     Hendelseskø for samordningspliktige vedtak (AP, AFP, OMS), og .
 
-    Påkrevd scope-verdi: `nav:pensjon/v1/samordning`
+    For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til: `nav:pensjon/v1/samordning`
   contact: {}
   version: '1.0'
 servers:
