--- a/docs/api/uforetrygd/uforetrygd-api.yaml
+++ b/docs/api/uforetrygd/uforetrygd-api.yaml
@@ -12,7 +12,11 @@ paths:
       description: |
         Krever token fra maskinporten med scope **nav:uforetrygd/tpordningene/harmottattuforeetter62.read**
         
-        - Denne gir svar på om det finnes løpende vedtak for uføretrygd (tilbake i tid) for perioden etter at bruker fylte 62 år med netto beregnet uføretrygd > 0. Tjenesten tar bare hensyn til ytelseskomponenten Uføretrygd Ordinær, ikke evt barnetillegg. Hvis verdien er True, vil vilkåret om å ikke ha mottatt uføretrygd ikke være oppfylt ved ønsket uttakstidspunkt.
+        - Gir svar på om det finnes løpende vedtak for uføretrygd (tilbake i tid) for perioden etter at bruker fylte 62 år med netto beregnet uføretrygd > 0.
+        
+        Detaljer:
+        
+        - Tjenesten tar bare hensyn til ytelseskomponenten Uføretrygd Ordinær, ikke evt barnetillegg. Hvis verdien er True, vil vilkåret om å ikke ha mottatt uføretrygd ikke være oppfylt ved ønsket uttakstidspunkt.
         - Det garanteres bare at data er riktig for personer som fyller 62 år fra 01.01.2025.
         - Med «løpende» menes her at vedtaket er gyldig. Vedtaket trenger ikke nødvendigvis å gjelde for tidspunktet da tjenesten kalles. F.eks. skal tjenesten også gi True om bruker har vedtak om uføretrygd som er opphørt på kalltidspunktet, men som har gjeldt for tidsrom etter fylte 62, og som har gitt netto utbetaling av uføretrygd i det tidsrommet.
         - Med «netto beregnet uføretrygd» menes her den delen av uføretrygdutbetalingen som er i behold etter etteroppgjøret dersom etteroppgjøret er gjort, eller det som er utbetalt, men uten at det er gjort etteroppgjør for perioden. Vi skal avklare om «netto utbetalt uføretrygd» tar hensyn til om utbetalingen er krevd tilbake på andre måter enn gjennom etteroppgjør, slik som folketrygdloven § 22-15, eller ikke. «Netto» handler her ikke om skattlegging.
@@ -50,7 +54,11 @@ paths:
       description: |
         Krever token fra maskinporten med scope **nav:uforetrygd/tpordningene/harlopendevedtakomufore.read**
 
-        Gir svar på om personen har et løpende, ikke-avsluttet vedtak om uføretrygd på ønsket AFP-uttakstidspunkt eller senere (uavhengig av om det faktisk er utbetalt noe, og uavhengig av alder). Feltet er relevant for veiledning. Bruker er her i en tidskritisk situasjon der hen må velge mellom AFP og uføretrygd. En mulighet kan være å sette behandling av AFP-søknad på vent, og informere bruker om at de må velge mellom AFP og uføretrygd. Å evt. gi simulering av AFP, og be bruker ta kontakt med NAV for veiledning om uføretrygd og konsekvenser av å si fra seg denne, og informere om at bruker må si fra seg uføretrygden dersom de ønsker å ta ut AFP.
+        - Gir svar på om personen har et løpende, ikke-avsluttet vedtak om uføretrygd på ønsket AFP-uttakstidspunkt eller senere (uavhengig av om det faktisk er utbetalt noe, og uavhengig av alder).
+        
+        Formål:
+        
+        - Feltet er relevant for veiledning. Bruker er her i en tidskritisk situasjon der hen må velge mellom AFP og uføretrygd. En mulighet kan være å sette behandling av AFP-søknad på vent, og informere bruker om at de må velge mellom AFP og uføretrygd. Å evt. gi simulering av AFP, og be bruker ta kontakt med NAV for veiledning om uføretrygd og konsekvenser av å si fra seg denne, og informere om at bruker må si fra seg uføretrygden dersom de ønsker å ta ut AFP.
       operationId: harLopendeVedtakOmUfore
       parameters:
         - in: header
@@ -85,8 +93,12 @@ paths:
         Krever token fra maskinporten med scope **nav:uforetrygd/tpordningene/haruforesoknadunderbehandling.read**
         
         - Gir svar på om AFP-søkeren på kall-tidspunktet har en søknad om uføretrygd til behandling hos NAV.
-        - Formålet er det samme som for lopendeVedtakOmUfore – å fange opp om bruker kan ha behov for veiledning om valg mellom AFP og uføretrygd.
-        - Åpent spørsmål: Ønsker TP-ordningen også å vite om åpent krav om klage/anke på uføretrygd?
+        
+        Formål:
+        - Å fange opp om bruker kan ha behov for veiledning om valg mellom AFP og uføretrygd.
+        
+        Ikke avklart:
+        - Ønsker TP-ordningen også å vite om åpent krav om klage/anke på uføretrygd?
         - Per nå vet vi ikke nøyaktig hvilke tilfeller som vil kunne fanges opp her og hvilke som kunne vært relevante, men som faller utenfor. Dette avhenger av hvilke rutiner vi har for når krav om uføretrygd registreres i pensjonssaksbehandlingssystemet, og det har vi ikke ennå sjekket opp. Vi kan evt. undersøke dette.
       operationId: harUforesoknadUnderBehandling
       parameters:
@@ -121,7 +133,7 @@ paths:
       description: |
         Krever token fra maskinporten med scope **nav:uforetrygd/tpordningene/uforeperioder.read**
         
-        Henter en persons uføreperioder som overlapper helt eller delvis med input-datoene
+        - Henter en persons uføreperioder som overlapper helt eller delvis med input-datoene
       operationId: uforeperioder
       parameters:
         - in: header
